# bangumi-ana-report

./: .env.example  .gitignore  Cargo.toml  README.md  report.html
.cargo/: config.toml
src/: ai.rs  analysis.rs  api.rs  main.rs  report.rs  template.html
