[package]
name = "bangumi-ana-report"
version = "1.0.1"
edition = "2021"
description = "Bangumi 用户收藏分析报告生成器"
authors = ["bangumi-ana-report"]

[[bin]]
name = "bangumi-ana-report"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
colored = "2"
